fixed carousel unaligned

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -24,8 +24,8 @@ body {
 }
 
 .vertical-scroll-container {
-    width:100%;
-    height:100%;
+    width: 100vw;
+    height: 100vh;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -177,10 +177,6 @@ nav {
 
 .overlay_heritage {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
     transform: skew(10deg) translateX(-55vw);
     transform-origin: top left;
     background-color: rgba(255, 0, 0, 0);
@@ -300,7 +296,6 @@ nav {
     margin-right: auto;
     margin-left: auto;
     padding: 0 !important;
-    margin-bottom: 3rem !important;
 }
 /*
  * Timeline
